First Activity: Simple field selection and Cypress basics
First Test created ("Main page is accessible" on main_page.cy.js)
Second Test created ("Sign up validation (Happy Path)" on sign_up.cy.js)

ps: Extra flourishes and tests added just to try some stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+github*
+
 # Created by https://www.toptal.com/developers/gitignore/api/node,cypressio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,cypressio,visualstudiocode
 
